Tankkauslista ok ja siistimistä

--- a/AutonHuoltoSovellus/AutonHuoltoSovellus.csproj
+++ b/AutonHuoltoSovellus/AutonHuoltoSovellus.csproj
@@ -19,6 +19,7 @@
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>	<!-- Required for SkiaSharp -->
 
 		<!-- Display name -->
 		<ApplicationTitle>AutonHuoltoSovellus</ApplicationTitle>
@@ -60,6 +61,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Maui" Version="9.1.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.2" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
